--- a/package.json
+++ b/package.json
@@ -139,7 +139,8 @@
         "react-dom": "^18.3.1",
         "react-i18next": "^11.18.6",
         "react-redux": "^8.1.3",
-        "react-router-dom": "^6.26.1"
+        "react-router-dom": "^6.26.1",
+        "swiper": "^11.1.10"
     },
     "loki": {
         "configurations": {
